<resources>
    <string name="app_name" translatable="false">Tabata Timer (massaa)</string>
    <string name="name_seance">Nom de la séance: </string>
    <string name="preparation_time">Temps de préparation : </string>
    <string name="nb_sequences">Nombre de séquences : </string>
    <string name="nb_cycles">Nombre de cycles : </string>
    <string name="work_time">Temps de travail : </string>
    <string name="rest_time">Temps de repos : </string>
    <string name="long_rest_time">Temps de repos entre séquences : </string>
    <string name="save">Enregistrer</string>
    <string name="create_seance">Créer un séance</string>
    <string name="sec">secondes</string>
    <string name="default_preparation">10</string>
    <string name="default_nbSequences">5</string>
    <string name="default_nbCycles">5</string>
    <string name="default_workTime">20</string>
    <string name="default_restTime">10</string>
    <string name="default_longRestTime">60</string>
    <string name="play_workout">Jouer une séance</string>
    <string name="create_workout">Créer une séance</string>
    <string name="workout_list">Liste des séances</string>
    <string name="back">Retourà la page principale</string>
    <string name="list_seance">Liste des séances</string>
    <string name="activity">Activité</string>
    <string name="zero">0</string>
</resources>