<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSeanceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/create_seance"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/name_seance" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/customborder"
            android:orientation="vertical"
            android:padding="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lb_prepTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/et_prepTime"
                    android:text="@string/preparation_time" />

                <EditText
                    android:id="@+id/et_prepTime"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/default_preparation" />

                <TextView
                    android:id="@+id/lb_prepTime_sec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/et_prepTime"
                    android:text="@string/sec" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lb_nbSequences"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/et_nbSequences"
                    android:text="@string/nb_sequences" />

                <EditText
                    android:id="@+id/et_nbSequences"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/default_nbSequences" />

            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/customborder"
                android:orientation="vertical">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/lb_nbCycles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/et_nbCycles"
                        android:text="@string/nb_cycles" />

                    <EditText
                        android:id="@+id/et_nbCycles"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        android:lines="1"
                        android:maxLines="1"
                        android:text="@string/default_nbCycles" />
                </TableRow>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/customborder"
                    android:orientation="vertical">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/lb_workTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@id/et_workTime"
                            android:text="@string/work_time" />

                        <EditText
                            android:id="@+id/et_workTime"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:inputType="number"
                            android:lines="1"
                            android:maxLines="1"
                            android:text="@string/default_workTime" />

                        <TextView
                            android:id="@+id/lb_workTime_sec"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@id/et_workTime"
                            android:text="@string/sec" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/lb_restTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@id/et_restTime"
                            android:text="@string/rest_time" />

                        <EditText
                            android:id="@+id/et_restTime"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:inputType="number"
                            android:lines="1"
                            android:maxLines="1"
                            android:text="@string/default_restTime" />

                        <TextView
                            android:id="@+id/lb_restTime_sec"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@id/et_restTime"
                            android:text="@string/sec" />

                    </TableRow>
                </LinearLayout>
            </LinearLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lb_longRestTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/et_longRestTime"
                    android:text="@string/long_rest_time" />

                <EditText
                    android:id="@+id/et_longRestTime"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/default_longRestTime" />

                <TextView
                    android:id="@+id/lb_longRestTime_sec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/et_longRestTime"
                    android:text="@string/sec" />

            </TableRow>
        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/save" />
    </LinearLayout>

</RelativeLayout>
